--- a/Kaartjescomputer/index.html
+++ b/Kaartjescomputer/index.html
@@ -13,7 +13,7 @@
     </script>
   </head>
   <body>
-    <h1>Je kan nu ook + gebruiken</h1>
+    <h1>Je kan nu ook "+" gebruiken</h1>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
