--- a/Kaartjescomputer/index.html
+++ b/Kaartjescomputer/index.html
@@ -13,6 +13,9 @@
     </script>
   </head>
   <body>
+    <p>Je kan nu ook '+' gebruiken</p>
+    <br />
+    <br />
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
