--- a/Soulslike/index.html
+++ b/Soulslike/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGl.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGL.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -21,6 +21,5 @@
         <div class="title">Soulslike</div>
       </div>
     </div>
-    <p>Werkt niet op chrome</p>
   </body>
 </html>
