--- a/Kaartjescomputer/index.html
+++ b/Kaartjescomputer/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Soulslike</title>
+    <title>Unity WebGL Player | Kaartjes Computer</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Webgl_ADMIN_Apr-06-114806-2019_Conflict.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Kaartjescomputer.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Soulslike</div>
+        <div class="title">Kaartjes Computer</div>
       </div>
     </div>
   </body>
