--- a/Kaartjescomputer/index.html
+++ b/Kaartjescomputer/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <script>window.location = "https://www.youtube.com/watch?v=dQw4w9WgXcQ;"</script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Kaartjes Computer</title>
